package ProtoTable;
message HotFixTable
{
required sint32 ID = 1;
required string Descrip = 2;
repeated string ResourceName = 3;
};
